Do not pan when audio is through internal speakers

Bug: 874102
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I64ae721146a6ac631800bd0bbd1ca6cca9f522f8
Reviewed-on: https://chromium-review.googlesource.com/1172741
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Toni Baržić <tbarzic@chromium.org>
Reviewed-by: Katie Dektar <katie@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583060}
Former-commit-id: cd715fd3f0075cc0df5f914ed8db7d8e173e9ddc